--- a/app/src/main/res/layout/first_start_dialog.xml
+++ b/app/src/main/res/layout/first_start_dialog.xml
@@ -9,7 +9,7 @@
         android:layout_width="256dp"
         android:layout_margin="32dp"
         android:layout_gravity="center"
-        android:layout_height="450dp">
+        android:layout_height="500dp">
 
     <TextView
         android:layout_width="match_parent"
@@ -48,6 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
+            android:id="@+id/mercy"
             android:text="قيمة الرحمة"
             android:textColor="@color/amber_200"
             android:layout_margin="16dp"
@@ -58,6 +59,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:text="قيمة الاحترام"
+            android:id="@+id/respect"
             android:textColor="@color/amber_200"
             android:layout_margin="16dp"
             android:layout_weight="1"
@@ -70,12 +72,14 @@
             android:textColor="@color/amber_200"
             android:layout_margin="16dp"
             android:layout_weight="1"
+            android:id="@+id/ROP"
             android:layout_height="0dp"/>
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
             android:text="قيمة الصدق"
+            android:id="@+id/honesty"
             android:textColor="@color/amber_200"
             android:layout_margin="16dp"
             android:layout_weight="1"
@@ -88,6 +92,7 @@
             android:textColor="@color/amber_200"
             android:layout_margin="16dp"
             android:layout_weight="1"
+            android:id="@+id/trust"
             android:layout_height="0dp"/>
         <CheckBox
             android:layout_width="wrap_content"
@@ -97,7 +102,17 @@
             android:textColor="@color/amber_200"
             android:layout_margin="16dp"
             android:layout_weight="1"
+            android:id="@+id/justice"
             android:layout_height="0dp"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:id="@+id/finishB"
+            android:layout_gravity="center"
+            android:layout_weight="2.3"
+            android:layout_height="0dp"
+            android:layout_margin="16dp"
+            android:background="@color/blue_300"
+            android:text="إنهاء"/>
 
 
 
