--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="64dp"
+android:padding="16dp"
     tools:context=".MainActivity">
+    <EditText
+        android:layout_width="match_parent"
+        android:id="@+id/inputSearch"
+        android:layout_height="wrap_content"/>
 
 
+<ListView
+    android:layout_width="match_parent"
+    android:id="@+id/list"
+    android:layout_height="match_parent">
+
+</ListView>
 
 </LinearLayout>
