--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,22 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/grey_900"
-android:padding="16dp"
+    android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".MainActivity">
+
     <EditText
-        android:layout_width="match_parent"
         android:id="@+id/inputSearch"
-        android:background="@color/purple_900"
-        android:layout_height="wrap_content"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Search"
+        android:background="@color/purple_900" />
 
 
-<ListView
-    android:layout_width="match_parent"
-    android:id="@+id/list"
-    android:layout_height="match_parent">
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</ListView>
+    </ListView>
 
 </LinearLayout>
