--- a/app/src/main/res/layout/athkar_list_view.xml
+++ b/app/src/main/res/layout/athkar_list_view.xml
@@ -6,5 +6,8 @@
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:gravity="center"
-    android:textColor="@color/grey_white_1000"
+    android:textColor="@color/indigo_900"
+    android:textStyle="bold"
+    android:padding="32dp"
+    android:textSize="32dp"
     android:minHeight="?android:attr/listPreferredItemHeightSmall" />
