--- a/app/src/main/res/layout/athkar_list_view.xml
+++ b/app/src/main/res/layout/athkar_list_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:gravity="center"
-    android:textColor="@color/indigo_900"
+    android:textColor="@color/grey_black_1000"
     android:textStyle="bold"
     android:padding="32dp"
     android:textSize="32dp"
