--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#616161</color>
-    <color name="colorPrimaryDark">#585858</color>
-    <color name="colorAccent">#616161</color>
+    <color name="colorPrimary">#1F31B3</color>
+    <color name="colorPrimaryDark">#13199E</color>
+    <color name="colorAccent">#1F33DA</color>
 
 
     <color name="red_50">#fde0dc</color>
