--- a/app/src/main/res/layout/activity_categorydetail.xml
+++ b/app/src/main/res/layout/activity_categorydetail.xml
@@ -2,17 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey_900"
+    android:background="@drawable/night"
     android:orientation="vertical">
 
 
     <TextView
         android:id="@+id/text1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:gravity="center"
-        android:textColor="@color/grey_white_1000"
+        android:textStyle="bold"
+        android:textColor="@color/grey_black_1000"
         android:minHeight="?android:attr/listPreferredItemHeightSmall" />
 
 </LinearLayout>
